spacing fixes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,7 +105,7 @@ form{
   padding: 20px;
   border-radius: 8px; /* Rounds corners */
   margin: 20px 0; /* Adds vertical margin */
-  animation: fadein 2s ease-out forwards;
+  animation: fadein 2.3s ease-out forwards;
 }
 
 .form-container-2{
@@ -119,7 +119,7 @@ form{
   border-radius: 8px; /* Rounds corners */
   margin: 20px 0; /* Adds vertical margin */
   z-index: 2;
-  animation: fadein 2s ease-out forwards;
+  animation: fadein 2.3s ease-out forwards;
 }
 
 @keyframes moveWave {
@@ -156,21 +156,33 @@ a:hover{
   color: purple;
 }
 
+ul{
+  list-style-type: none;
+  padding: 15px;
+}
+
+li{
+  margin: 15px;
+}
+
 input{
   border-radius: 8px;
   padding: 10px;
   border-style: hidden;
   background-color: #d8d8d8;
   font-family: "Exo 2", sans-serif;
-  font-size:medium;
+  font-size:20px;
 }
 
 input:focus{
   background-color: #f6f6f6;
+  transform: scale(1.05);
 }
 
 input:hover{
   background-color: #f6f6f6;
+  transform: scale(1.05);
+  transition: transform 0.09s ease-in-out;
 }
 
 button{
@@ -180,11 +192,13 @@ button{
   background-color: #d8d8d8;
   font-family: "Exo 2", sans-serif;
   text-align: center;
-  font-size:small;
+  font-size:15px;
 }
 
 button:hover{
   background-color: #f6f6f6;
+  transform: scale(1.10);
+  transition: transform 0.1s ease-in-out;
 }
 
 .App-header {
